# lab17

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
reports/: REPORT.md
sources/: demo.cpp
